--- a/View/style.css
+++ b/View/style.css
@@ -383,12 +383,61 @@ tr {
     text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
 
-tr:hover td {
-    background: #4E5066;
-    color: #FFFFFF;
-    border-top: 1px solid #22262e;
-    border-bottom: 1px solid #22262e;
-}
+    body {
+        background-color: #0B736E;
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: 400;
+        text-rendering: optimizeLegibility;
+      }
+      
+      div.table-title {
+         display: block;
+        margin: auto;
+        max-width: 600px;
+        padding:5px;
+        width: 100%;
+      }
+      
+      .table-title h3 {
+         color: #fafafa;
+         font-size: 30px;
+         font-weight: 400;
+         font-style:normal;
+         font-family: "Roboto", helvetica, arial, sans-serif;
+         text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+         text-transform:uppercase;
+      }
+      
+      
+      /*** Table Styles **/
+      
+      .table-fill {
+        background: white;
+        border-radius:3px;
+        border-collapse: collapse;
+        height: 320px;
+        margin: auto;
+        max-width: 600px;
+        padding:5px;
+        width: 100%;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        animation: float 5s infinite;
+      }
+       
+      th {
+        color:#D5DDE5;;
+        background:#1b1e24;
+        border-bottom:4px solid #9ea7af;
+        border-right: 1px solid #343a45;
+        font-size:23px;
+        font-weight: 100;
+        padding:24px;
+        text-align:left;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        vertical-align:middle;
+      }
+      
 
 td {
     background: #FFFFFF;
