--- a/View/accueil.html
+++ b/View/accueil.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Accueil Puppy</title>
+    <title>Accueil PuppyCo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,13 +12,18 @@
         <nav>
             <ul>
             <div class="dropdown">
-                <button class="dropbtn">Catégorie</button>
+                <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
                     <a class="active" href="#home">Home</a>
                     <a href="#news">News</a>
                     <a href="#contact">Contact</a>
                     <a href="#about">About</a>
                 </div>
+            </div>
+            <div class="dropdown">
+                    <button class="dropbtn">Catégories</button>
+                    <div id="listCategories" class="dropdown-content">
+                    </div>
             </div>
             <a class="btnConnexion" onclick="openNav()">&#9776; Connexion</a>
             </ul>
@@ -37,14 +42,14 @@
                     <div class="login-form">
                         <div class="control-group">
                             <input id="email" type="text" class="login-field" placeholder="eMail" id="login-mail" name="mail">
-                            <label class="login-field-icon fui-user" for="login-mail"></label>
+                            <label for="login-mail"></label>
                         </div>
 
                         <div class="control-group">
                             <input id="mdp" type="password" class="login-field" placeholder="Mot de passe" id="login-password" name="mdp">
-                            <label class="login-field-icon fui-lock" for="login-password"></label>
+                            <label for="login-password"></label>
                         </div>
-                        <input type="submit" class="btn btn-primary btn-large btn-block" value="Connexion" onclick="checkLogs()"/>
+                        <input type="submit" class="btn" value="Connexion" onclick="checkLogs()"/>
                     </div>
                 </div>
             </div>
@@ -96,7 +101,27 @@
                 }
             });
 
+            loadCategories();
         });
+
+
+
+        function loadCategories() {
+            $.ajax({
+                url: "/puppyCo/Model/rest.php?/category/read",
+                type: "GET",
+                success: function (data) {
+                    var dataJson = JSON.parse(data);
+                    console.log(dataJson);
+                    $(dataJson).each(function (index, element) {
+                        $("#listCategories").append('<a href="/PuppyCo/view/gestionProduits">'+element['nom']+'</a>');
+                    });
+                },
+                error: function (resultat, statut, erreur) {
+                    console.log('erreur', erreur);
+                }
+            });
+        }
     </script>
 </body>
 
