--- a/View/gestionProduits.html
+++ b/View/gestionProduits.html
@@ -3,13 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gestion Produits</title>
+    <title>Liste Produits</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body>    
+
+    
+        <div w3-include-html="barreMenu.html"></div> 
+
+        
+
+
     <div class="table-title">
-        <h3>Gestion Produits</h3>
+        <h3>Liste Produits</h3>
     </div>
     <button type="button" class="btn" onclick="window.open('creerUtilisateur.html');">Ajouter un produit</button>
     <button type="button" onclick="goLeft()">&larr;</button>
@@ -38,17 +45,37 @@
     </table>
 
 
-    <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
+
+
+
+
+
+
+
+    <script src="barreMenu.js"></script> 
+    <script src="https://www.w3schools.com/lib/w3.js"></script> 
+    <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script>
         var pagination = 20;
         var start = 0;
+        var method;
 
         $(document).ready(function () {
+            if(getUrlParameter("method")=="getByCategory") {
+                method = "getByCategory";
+            }
+            else {
+                method = "read";
+            }
+
+            w3.includeHTML();
+            loadCategories();
             loadData();
         });
 
 
+        
 
         function setPagination(nb) {
             pagination = nb;
@@ -60,12 +87,12 @@
         function loadData() {
             $("#bodyDetail").empty();
             $.ajax({
-                url: "/puppyCo/Model/rest.php?/product/read/"+start+"/"+pagination,  
+                url: "/puppyCo/Model/rest.php?/product/"+method+"/"+getUrlParameter("category")+"/"+start+"/"+pagination,  
                 type: "GET",
                 success: function (data) {
                     var dataJson = JSON.parse(data);
                     $(dataJson).each(function (index, element) {
-                        $("#bodyDetail").append('<tr><td><a href="produit.html?ref=' + element['reference'] + '"><img height="50px" width="50px" src="' + element['url'] + '"/></a></td><td>' + element['reference'] + '</td><td>' + element['category_id'] + '</td><td>' + element['title'] + '</td><td>' + element['price'] + '</td><td>' + element['description'] + '</td><td><a href=".php?id=' + element['REFERENCE'] + '">Supprimer</a></td></tr>');
+                        $("#bodyDetail").append('<tr><td><a href="produit.html?ref=' + element['reference'] + '"><img height="50px" width="50px" src="' + element['url'] + '"/></a></td><td>' + element['reference'] + '</td><td>' + element['nom'] + '</td><td>' + element['title'] + '</td><td>' + element['price'] + '</td><td>' + element['description'] + '</td><td><a href=".php?id=' + element['REFERENCE'] + '">Supprimer</a></td></tr>');
                     });
                 },
                 error: function (resultat, statut, erreur) {
@@ -73,6 +100,8 @@
                 }
             });
         }
+
+
 
 
 
@@ -103,7 +132,7 @@
                 success: function (data) {
                     var dataJson = JSON.parse(data);
                     $(dataJson).each(function (index, element) {
-                        $("#bodyDetail").append('<tr><td><a href="produit.html?ref=' + element['reference'] + '"><img height="50px" width="50px" src="' + element['url'] + '"/></a></td><td>' + element['reference'] + '</td><td>' + element['category_id'] + '</td><td>' + element['title'] + '</td><td>' + element['price'] + '</td><td>' + element['description'] + '</td><td><a href=".php?id=' + element['REFERENCE'] + '">Supprimer</a></td></tr>');
+                        $("#bodyDetail").append('<tr><td><a href="produit.html?ref=' + element['reference'] + '"><img height="50px" width="50px" src="' + element['url'] + '"/></a></td><td>' + element['reference'] + '</td><td>' + element['category_id'] + '</td><td>' + element['title'] + '</td><td>' + element['price'] + '</td><td>' + element['description'] + '</td><td><a href="/PuppyCo/Model/.php?id=' + element['reference'] + '">Supprimer</a></td></tr>');
                     });
                 },
                 error: function (resultat, statut, erreur) {
@@ -111,6 +140,14 @@
                 }
             });
         }
+
+
+
+
+
+
+
+
     </script>
 
 </body>
