--- a/View/barreMenu.html
+++ b/View/barreMenu.html
@@ -20,6 +20,9 @@
                     <a class="btnConnexion" onclick="openNav()">&#9776; Connexion</a>
                     </ul>
                 </nav>
+                <br /></div>
+                <br /></div>
+                <br />
                 <div class="categorie">
         
                 </div>
@@ -45,4 +48,7 @@
                             </div>
                         </div>
                     </div>
-            </div>
+                </div>
+                <br /></div>
+                <br /></div>
+                <br />
