--- a/View/accueil.html
+++ b/View/accueil.html
@@ -9,23 +9,14 @@
 
 <body>
 
-        <div w3-include-html="barreMenu.html"></div> 
+    <div w3-include-html="barreMenu.html"></div> 
         
 
-
-
-
-
-
-
-
-        <script src="barreMenu.js"></script> 
-        <script src="https://www.w3schools.com/lib/w3.js"></script> 
+    <script src="barreMenu.js"></script> 
+    <script src="https://www.w3schools.com/lib/w3.js"></script> 
     <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="/puppyCo/Model/main.js"></script>
     <script>
-
-
 
         $(document).ready(function () {
             w3.includeHTML();
@@ -38,7 +29,7 @@
                     var dataJson = JSON.parse(data);
                     console.log(dataJson);
                     $(dataJson).each(function (index, element) {
-                        $(".categorie").append('<a href="produit.html?ref=' + element['REFERENCE'] + '"><div class="container-card"><div class="card"><div class="app-title"><img src="'+element['URL']+'"><h1>'+element['TITLE']+'</h1></div></div></div></a>');
+                        $(".categorie").append('<a href="produit.html?ref=' + element['REFERENCE'] + '"><div class="container-card"><div class="card"><div class="app-title"><img src="'+element['URL']+'"><h1>'+element['TITLE']+'</h1><br/><h1>'+element['PRICE']+' e</h1></div></div></div></a>');
                     });
                 },
                 error: function (resultat, statut, erreur) {
@@ -48,9 +39,6 @@
 
             
         });
-
-
-
 
     </script>
 </body>
