--- a/View/style.css
+++ b/View/style.css
@@ -1,8 +1,15 @@
+
+
+
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    top: 0px;
+    position: fixed;
     background-color: #333;
+    width: 100%;
 }
 
 li {
@@ -328,12 +335,13 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-div.table-title {
+.table-title {
     display: block;
     margin: auto;
     max-width: 600px;
     padding: 5px;
     width: 100%;
+    text-align: center;
 }
 
 .table-title h3 {
