--- a/View/barreMenu.html
+++ b/View/barreMenu.html
@@ -7,7 +7,7 @@
                                     <div class="dropdown-content">
                                         <a href="/PuppyCo">Home</a>
                                         <a href="/PuppyCo/View/Panier">Mon Panier</a>
-                                        <a href="#contact">Contact</a>
+                                        <a href="/PuppyCo/View/gestionUtilisateur.html">Gestion utilisateur</a>
                                         <a href="#about">About</a>
                                     </div>
                                 </div>
